// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Processor processing extends setting errors for an empty string 1`] = `
".boost.js: The following validations have failed:
  - Invalid field \\"extends\\" with value \\"\\". Received string with the following failures:
    - String cannot be empty."
`;

exports[`Processor processing extends setting errors for an empty string in an array 1`] = `
".boost.js: The following validations have failed:
  - Invalid field \\"extends\\". Received array/tuple with the following failures:
    - Invalid member \\"[1]\\" with value \\"\\". String cannot be empty."
`;

exports[`Processor processing extends setting errors for an invalid value 1`] = `
".boost.js: The following validations have failed:
  - Invalid field \\"extends\\" with value 123. Value must be one of: string, array<string>."
`;

exports[`Processor processing plugins setting errors for an invalid option value 1`] = `
".boost.js: The following validations have failed:
  - Invalid field \\"plugins\\". Received object/shape with the following failures:
    - Invalid field \\"foo\\" with value 123. Value must be one of: boolean, object."
`;

exports[`Processor processing plugins setting errors for an invalid value 1`] = `
".boost.js: The following validations have failed:
  - Invalid field \\"plugins\\" with value \`true\`. Value must be one of: array<string | tuple<string, boolean | object>>, object<boolean | object>."
`;

exports[`Processor processing validation validates each config 1`] = `
".boost.js: The following validations have failed:
  - Invalid field \\"debug\\" with value 123. Must be a boolean."
`;
